[Feature] Structure Quiz

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <ul class="nav-container">
                 <li><a href="./quiz/">Créer votre expérience</a></li>
                 <li><a href="./blog/">le blog</a></li>
-                <li class="profil"><a href="connect/">profile</a></li>
+                <li class="profil"><a href="connect/">Profil</a></li>
             </ul>
         </nav>
     </header>
