--- a/quiz/index.html
+++ b/quiz/index.html
@@ -19,7 +19,7 @@
     <header class="header-container">
         <div class="filter-background"></div>
         <h1 class="logo-container">
-            <img class="logo" src="../../images/logo/logo.svg">
+            <img class="logo" src="../../images/logo/logo-b.svg">
         </h1>
         <nav>
             <ul class="nav-container">
@@ -33,11 +33,12 @@
         <section>
             <article>
                 <h1>Quelle destination vous correspond le mieux</h1>
-                <p>En répondant à nos questions, nous pourrons déterminer ensemble quel séjour est le plus adapté à vos
+                <p class="accueil">En répondant à nos questions, nous pourrons déterminer ensemble quel séjour est le plus adapté à vos
                     besoins !</p>
-                <a class="btn" href="q1.html">commencer</a>
+                <a class="btn" href="q1.html">Commencer</a>
+                
             </article>
-            <img src="../images/icon/quiz_start.svg" alt="local">
+            <img class="index" src="../images/icon/quiz_start.svg" alt="local">
         </section>
     </main>
     <script type="module" src="../scripts/firebaseConfig.js"></script>
