--- a/quiz/q8.html
+++ b/quiz/q8.html
@@ -48,19 +48,50 @@
     <main>
       <section>
         <article>
-          <h1>Aimez-vous vous sociabliser pendant vos vacances ?</h1>
-          <div class="answers q3">
-            <div class="one">
-              <input class="btn" type="button" value="Non c'est une corvée">
-              <input class="btn" type="button" value="J’aime bien, dans le cadre d’activités">
-              <input class="btn" type="button" value="Lorsque la personne semble authentique">
-              <input class="btn" type="button" value="C’est indispensable pour moi">
+          <h1>Dans quels lieux souhaitez-vous partir durant votre séjour ?</h1>
+          <div class="answers margin">
+            <div class="one lieu ">
+              <button>
+                <div class="image quatorze little"></div>
+                <h3>Au bord de l’eau</h3>
+              </button>
+            </div>
+            <div class="one lieu">
+              <button>
+                <div class="image quinze little"></div>
+                <h3>Visiter les villes et monuments</h3>
+              </button>
+            </div>
+            <div class="one lieu">
+              <button>
+                <div class="image seize little"></div>
+                <h3>En montagne, en forêts</h3>
+              </button>
             </div>
           </div>
-          <a class="btn"
-            href="q6.html">Next</a>
+          <div class="answers bis margin">
+            <div class="one lieu">
+              <button>
+                <div class="image dix-sept little"></div>
+                <h3>Où il fait chaud</h3>
+              </button>
+            </div>
+            <div class="one lieu">
+              <button>
+                <div class="image dix-huit little"></div>
+                <h3>Où il fait froid</h3>
+              </button>
+            </div>
+            <div class="one lieu">
+              <button>
+                <div class="image dix-neuf little"></div>
+                <h3>Surprenez-moi</h3>
+              </button>
+            </div>
+          </div>
+          <a class="bis"
+            href="q9.html">Next</a>
         </article>
-        <img class="icon" src="../images/icon/q5.svg" alt="local">
       </section>
     </main>
     <script type="module"
