[feature] lien témoignage page détaillé

--- a/testimonials/add/index.html
+++ b/testimonials/add/index.html
@@ -34,22 +34,19 @@
         </section>
         <section>
             <div id="add">
-                <label for="title-testimony">Titre de l'histoire</label>
+                <label for="title-testimony">Citation</label>
                 <input id="title-testimony" type="text" alt="Name testimony">
 
                 <label for="travels-testimony">Séjours suivie</label>
                 <select name="travels follow" id="travels-testimony">
-
                 </select>
 
                 <label for="image-input">Image de présentation </label>
-                <input type="file" id="image-input" accept="image/jpeg, image/png, image/jpg">
-                <div id="display-image"></div>
+                <input type="file" id="image-input" accept="image/jpeg, image/png, image/jpg" multiple>
 
                 <label for="travelers-testimony">Le voyageur</label>
                 <select name="travelers" id="travelers-testimony">
                 </select>
-
 
                 <label for="content-testimony">Contenu</label>
                 <div id="content-testimony"></div>
