[feature] travels + lien html

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
         </h1>
         <nav>
             <ul class="nav-container">
-                <li><a href="./quiz/">Créer votre expérience</a></li>
-                <li><a href="./blog/">le blog</a></li>
-                <li class="profil"><a href="connect/">Profil</a></li>
+                <li><a href="./quiz/index.html">Créer votre expérience</a></li>
+                <li><a href="./blog/index.html">le blog</a></li>
+                <li class="profil"><a href="./connect/index.html">Se connecter</a></li>
             </ul>
         </nav>
     </header>
@@ -67,7 +67,7 @@
             <article>
                 <h2>Reconnectez-vous au monde qui vous entoure.</h2>
                 <p>Voyagez à votre façon et venez vivre une expérience qui vous ressemble.</p>
-                <button onclick="window.location.href = './quiz/';">Créez votre expérience</button>
+                <button onclick="window.location.href = './quiz/index.html';">Créez votre expérience</button>
             </article>
         </section>
         <section class="who-are-we">
@@ -82,7 +82,7 @@
                         pour
                         pouvoir vous trouver
                         en vous retrouvant avec votre meilleur compagnon : vous-même.</p>
-                    <button>En savoir plus</button>
+                    <button onclick="window.location.href = './quiz/index.html';" >En savoir plus</button>
                 </div>
             </article>
             <article class="explainer-container">
@@ -116,7 +116,7 @@
                         <img class="testimony-label-quoteUp" src="./images/icon/quoteUp.svg">
                         <img class="testimony-label-quoteDown" src="./images/icon/quoteDown.svg">
                     </div>
-                    <span><a class="testimony-label-button">En savoir plus</a></span>
+                    <span><a class="testimony-label-button" href="/testimonials/history/index.html?id=8dUQp6ExjqNDo6wWMk3A">En savoir plus</a></span>
                 </div>
             </article>
         </section>
@@ -143,7 +143,6 @@
             <h2>La une du Blog</h2>
             <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
-
                 </div>
                 <div class="swiper-pagination"></div>
             </div>
