--- a/testimonials/history/index.html
+++ b/testimonials/history/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Témoignage</title>
-    <link rel="stylesheet" href="https://use.typekit.net/zkf2zix.css">
     <link rel="icon" type="image/png" href="../../public/icon-16x16.png" />
     <link rel="icon" type="image/png" href="../../public/icon-32x32.png" />
     <link rel="icon" type="image/png" href="../../public/android-chrome-192x192.png" />
@@ -23,9 +22,9 @@
         </h1>
         <nav>
             <ul class="nav-container">
-                <li><a href="../../">Home</a></li>
-                <li><a href="">Créer votre expérience</a></li>
-                <li class="profil"><a href="connect/">se connecter</a></li>
+                <li><a href="../../">Accueil</a></li>
+                <li><a href="../../quiz/index.html">Créer votre expérience</a></li>
+                <li class="profil"><a href="../../connect/index.html">Se connecter</a></li>
             </ul>
         </nav>
     </header>
