--- a/connect/index.html
+++ b/connect/index.html
@@ -16,9 +16,9 @@
         </h1>
         <nav>
             <ul class="nav-container">
-                <li><a href="../">Home</a></li>
-                <li><a href="../quiz/">Créer votre expérience</a></li>
-                <li><a href="../blog/">le blog</a></li>
+                <li><a href="../">Accueil</a></li>
+                <li><a href="../quiz/index.html">Créer votre expérience</a></li>
+                <li><a href="../blog/index.html">le blog</a></li>
             </ul>
         </nav>
     </header>
@@ -49,7 +49,7 @@
                 <hr><span>Ou</span>
                 <hr>
             </div>
-            <p class="google">se connecter avec google</p>
+            <p class="google">Se connecter avec google</p>
         </div>
         <div class="connect-img-container">
             <img src="../images/login/log-in-img.webp">
