--- a/connect/signUp/index.html
+++ b/connect/signUp/index.html
@@ -16,9 +16,9 @@
         </h1>
         <nav>
             <ul class="nav-container">
-                <li><a href="../../">Home</a></li>
-                <li><a href="../../quiz/">Créer votre expérience</a></li>
-                <li><a href="../../blog/">le blog</a></li>
+                <li><a href="../../">Accueil</a></li>
+                <li><a href="../../quiz/index.html">Créer votre expérience</a></li>
+                <li><a href="../../blog/index.html">le blog</a></li>
             </ul>
         </nav>
     </header>
