--- a/contact/index.html
+++ b/contact/index.html
@@ -18,9 +18,9 @@
     </h1>
     <nav>
       <ul class="nav-container">
-        <li><a href="">Créer votre expérience</a></li>
-        <li><a href="/blog/">le blog</a></li>
-        <li class="profil"><a href="../connect/">Profile</a></li>
+        <li><a href="../quiz/index.html">Créer votre expérience</a></li>
+        <li><a href="../blog/index.html">le blog</a></li>
+        <li class="profil"><a href="../connect/index.html">Se connecter</a></li>
       </ul>
     </nav>
   </header>
