--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -2,21 +2,6 @@
 
 <head>
     <!-- Google Tag Manager -->
-    <script>
-        (function (w, d, s, l, i) {
-            w[l] = w[l] || [];
-            w[l].push({
-                'gtm.start': new Date().getTime(),
-                event: 'gtm.js'
-            });
-            var f = d.getElementsByTagName(s)[0],
-                j = d.createElement(s),
-                dl = l != 'dataLayer' ? '&l=' + l : '';
-            j.async = true;
-            j.src =
-                'https://www.googletagmanager.com/gtm.js?id=%27+i+dl;f.parentNode.insertBefore(j,f)';
-        })(window, document, 'script', 'dataLayer', 'GTM-PNBXLDC');
-    </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta property="og:site_name" content="Cactus et vous" />
@@ -41,26 +26,21 @@
 </head>
 
 <body>
-    <noscript>
-        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KW5X9XD" height="0" width="0"
-            style="display:none;visibility:hidden">
-        </iframe>
-    </noscript>
     <header class="header-container">
         <div class="filter-background"></div>
         <h1 class="logo-container">
-            <img class="logo" src="../../images/logo/logo.svg">
+            <img class="logo" src="../images/logo/logo.svg">
         </h1>
         <nav>
             <ul class="nav-container">
-                <li><a href="../">Home</a></li>
-                <li><a href="">Créer votre expérience</a></li>
-                <li class="profil"><a href="../connect/">Profile</a></li>
+                <li><a href="../">Accueil</a></li>
+                <li><a href="../quiz/index.html">Créer votre expérience</a></li>
+                <li class="profil"><a href="../connect/index.html">Se connecter</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section class="background">
+        <section>
             <article>
                 <div class="title-header privacy-policy">
                     <div>
@@ -68,11 +48,6 @@
                     </div>
                     <div>
                         <h2>Politique de confidentialité</h2>
-                    </div>
-                </div>
-                <div class="mouse">
-                    <div class="mouse-shape">
-                        <div class="mouse-animation"></div>
                     </div>
                 </div>
             </article>
