--- a/quiz/q8.html
+++ b/quiz/q8.html
@@ -39,9 +39,9 @@
       </h1>
       <nav>
         <ul class="nav-container">
-          <li><a href="../../">Home</a></li>
-          <li><a href="">Créer votre expérience</a></li>
-          <li class="profil"><a href="../connect/">se connecter</a></li>
+          <li><a href="../../">Accueil</a></li>
+          <li><a href="../quiz/index.html">Créer votre expérience</a></li>
+          <li class="profil"><a href="../connect/index.html">Se connecter</a></li>
         </ul>
       </nav>
     </header>
