--- a/quiz/results.html
+++ b/quiz/results.html
@@ -23,17 +23,17 @@
         </h1>
         <nav>
             <ul class="nav-container">
-                <li><a href="../../">Home</a></li>
-                <li><a href="">Créer votre expérience</a></li>
-                <li class="profil"><a href="../connect/">se connecter</a></li>
+                <li><a href="../../">Accueil</a></li>
+                <li><a href="../quiz/index.html">Créer votre expérience</a></li>
+                <li class="profil"><a href="../connect/index.html">Se connecter</a></li>
             </ul>
         </nav>
     </header>
-    <main>
+    <main id="results">
         <section>
             <article>
                 <h1>Voici les expériences que nous vous proposons !</h1>
-                <div class="sejour"></div>
+                <div id="travels"></div>
             </article>
         </section>
     </main>
