--- a/travels/read/index.html
+++ b/travels/read/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ajouter un témoignage</title>
+    <title>Témoignage</title>
+    <link rel="stylesheet" href="https://use.typekit.net/zkf2zix.css">
     <link rel="icon" type="image/png" href="../../public/icon-16x16.png" />
     <link rel="icon" type="image/png" href="../../public/icon-32x32.png" />
     <link rel="icon" type="image/png" href="../../public/android-chrome-192x192.png" />
@@ -23,40 +24,46 @@
         <nav>
             <ul class="nav-container">
                 <li><a href="../../">Accueil</a></li>
-                <li><a href="../../quiz/index.html">Créer votre expérience</a></li>
+                <li><a href="../../quiz/">Créer votre expérience</a></li>
                 <li class="profil"><a href="../../connect/index.html">Se connecter</a></li>
             </ul>
         </nav>
     </header>
-    <main id="add-container">
+    <main id="travel">
         <section>
-            <h1>Ajouter un témoignage</h1>
+           <article class="img-travel">
+                <div>
+                    <h1></h1>
+                    <h2></h2>
+                </div>
+                <div class="reserv">
+                    <h2>Réserver</h2>
+                    <p class="duration"></p>
+                    <p class="price"></p>
+                    <a class="btn">Je pars</a>
+                </div>
+           </article>
+           
         </section>
         <section>
-            <div id="add">
-                <label for="title-testimony">Citation</label>
-                <input id="title-testimony" type="text" alt="Name testimony">
+            <article>
+                <div>
+                    <h2>Le séjour en bref</h2>
+                    <div id="content">
 
-                <label for="travels-testimony">Séjours suivie</label>
-                <select name="travels follow" id="travels-testimony">
-                </select>
+                    </div>
+                </div>
+                <div class="activities">
+                    <h2>Activities</h2>
+                    <ul>
 
-                <label for="image-input">Image de présentation </label>
-                <input type="file" id="image-input" accept="image/jpeg, image/png, image/jpg" multiple>
-
-                <label for="travelers-testimony">Le voyageur</label>
-                <select name="travelers" id="travelers-testimony">
-                </select>
-
-                <label for="content-testimony">Contenu</label>
-                <div id="content-testimony"></div>
-
-                <button id="save-button">Ajouter</button>
-            </div>
+                    </ul>
+                </div>
+           </article>
         </section>
     </main>
     <script type="module" src="../../scripts/firebaseConfig.js"></script>
-    <script type="module" src="../../scripts/testimony.js"></script>
+    <script type="module" src="../../scripts/travels.js"></script>
 </body>
 
 </html>
