--- a/quiz/index.html
+++ b/quiz/index.html
@@ -32,7 +32,7 @@
     <main>
         <section>
             <article>
-                <h1>Quelle destination vous correspond le mieux</h1>
+                <h1>Quelle destination vous correspond le mieux ?</h1>
                 <p class="accueil">En répondant à nos questions, nous pourrons déterminer ensemble quel séjour est le plus adapté à vos
                     besoins !</p>
                 <a class="btn" href="q1.html">Commencer</a>
