[style] style + structure privacy

--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -39,7 +39,7 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main id="privacy">
         <section>
             <article>
                 <div class="title-header privacy-policy">
@@ -172,18 +172,6 @@
         </div>
     </footer>
     <script type="module" src="../scripts/main.js"></script>
-    <script>
-        window.axeptioSettings = {
-            clientId: "62b8c0847c591dfcedcecac0",
-            cookiesVersion: "escapee-fr",
-        };
-
-        (function (d, s) {
-            var t = d.getElementsByTagName(s)[0], e = d.createElement(s);
-            e.async = true; e.src = "//static.axept.io/sdk.js";
-            t.parentNode.insertBefore(e, t);
-        })(document, "script");
-    </script>
 </body>
 
 </html>
