[fix] connection + style

--- a/connect/index.html
+++ b/connect/index.html
@@ -24,6 +24,7 @@
     </header>
     <div class="main-container">
         <div class="connect-container">
+            <h1>La connexion et l'inscription ne fonctionnent pas </h1>
             <h2>Bienvenue chez vous</h2>
             <h3>Bon retour ! Entrez vos identifiants ci-dessous.</h3>
             <div id="signIn">
@@ -43,19 +44,20 @@
                 </form>
             </div>
             <div class="register">
-                <h3>Pas encore inscrit ? <a href="./signUp/index.html">Créez un compte</a></h3>
+                <h3>Pas encore inscrit ? <a href="#">Créez un compte</a></h3>
             </div>
-            <div class="or-connect-google">
+            <!-- <div class="or-connect-google">
                 <hr><span>Ou</span>
                 <hr>
             </div>
-            <p class="google">Se connecter avec google</p>
+            <p class="google">Se connecter avec google</p> -->
         </div>
         <div class="connect-img-container">
             <img src="../images/login/log-in-img.webp">
         </div>
     </div>
 
+    <script type="module" src="../scripts/firebaseConfig.js"></script>
     <script type="module" src="../scripts/firebaseAuth.js"></script>
 </body>
 
