--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
         </h1>
         <nav>
             <ul class="nav-container">
-                <li><a href="./quiz/index.html">Créer votre expérience</a></li>
-                <li><a href="./blog/index.html">le blog</a></li>
-                <li class="profil"><a href="./connect/index.html">Se connecter</a></li>
+                <li><a href="/quiz/index.html">Créer votre expérience</a></li>
+                <li><a href="/blog/index.html">le blog</a></li>
+                <li class="profil"><a href="/connect/index.html">Se connecter</a></li>
             </ul>
         </nav>
     </header>
