[fix] update path

--- a/quiz/index.html
+++ b/quiz/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog</title>
+    <title>Quiz</title>
     <link rel="icon" type="image/png" href="../public/icon-16x16.png" />
     <link rel="icon" type="image/png" href="../public/icon-32x32.png" />
     <link rel="icon" type="image/png" href="../public/android-chrome-192x192.png" />
@@ -19,7 +19,7 @@
     <header class="header-container">
         <div class="filter-background"></div>
         <h1 class="logo-container">
-            <img class="logo" src="../../images/logo/logo-b.svg">
+            <img class="logo" src="../images/logo/logo-b.svg">
         </h1>
         <nav>
             <ul class="nav-container">
