--- a/quiz/q2.html
+++ b/quiz/q2.html
@@ -7,7 +7,7 @@
       content="IE=edge">
     <meta name="viewport"
       content="width=device-width, initial-scale=1.0">
-    <title>Blog</title>
+    <title>Questions 2</title>
     <link rel="icon"
       type="image/png"
       href="../public/icon-16x16.png" />
@@ -35,7 +35,7 @@
       <div class="filter-background"></div>
       <h1 class="logo-container">
         <img class="logo"
-          src="../../images/logo/logo-b.svg">
+          src="../images/logo/logo-b.svg">
       </h1>
       <nav>
         <ul class="nav-container">
